# CppColDB

./: .gitignore  CMakeLists.txt  README.md
flows/: README.md
flows/bootstrap/: database-initialization-flow.md  database-shutdown-flow.md
flows/data/: catalog-lookup-flow.md  delete-update-data-flow.md  insert-data-flow.md  table-scan-flow.md
flows/error/: error-handling-flow.md
flows/execution/: aggregation-flow.md  join-execution-flow.md  vectorized-execution-flow.md
flows/main/: system-architecture-overview.md
flows/monitoring/: query-profiling-flow.md
flows/parallel/: pipeline-execution-flow.md  pipeline-executor-flow.md  task-scheduler-flow.md
flows/query-processing/: optimizer-pipeline-flow.md  parsing-flow.md  planner-binding-flow.md  query-execution-flow.md
flows/storage/: buffer-manager-flow.md  checkpoint-flow.md  checkpoint-sequence.md  column-chunk-flow.md  column-compression-flow.md  wal-replay-flow.md  wal-write-flow.md
flows/transaction/: commit-flow.md  mvcc-visibility-flow.md  rollback-flow.md  transaction-lifecycle-flow.md
plans/: plan-aggregation.md  plan-binder.md  plan-buffer-manager.md  plan-catalog.md  plan-checkpoint.md  plan-column-compression.md  plan-column-storage.md  plan-core-types.md  plan-database.md  plan-error-handling.md  plan-implementation-guide.md  plan-join-execution.md  plan-optimizer.md  plan-physical-planner.md  plan-pipeline-executor.md  plan-query-profiler.md  plan-sql-parser.md  plan-task-scheduler.md  plan-transaction.md  plan-vectorized-operators.md  plan-wal.md
tasks/: todo.md
